# ChangeLog for net-print/foo2zjs
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  25 Jan 2011; Dmitry 'daks' Fomenko <daks12@gmail.com>
  foo2zjs-20081129-Makefile.patch,
  -files/foo2zjs-Makefile-20080225.diff,
  -files/foo2zjs-udevfwld-20080225.diff,
  -files/foo2zjs-20080225.ebuild:
  Fix ebuild, fix for manifest failure. Remove old.

  22 May 2010; Torsten Veller <tove@gentoo.org> metadata.xml:
  Remove genstef from metadata.xml (#66339)

  17 Mar 2009; Peter Alfredsen <loki_val@gentoo.org> Manifest:
  Fix for manifest failure. Bug 262801.

  02 Dec 2008; Tomas Chvatal <scarabeus@gentoo.org>
  files/foo2zjs-20081129-Makefile.patch:
  Fix install when using foomaticdb.

*foo2zjs-20081129 (29 Nov 2008)

  29 Nov 2008; Tomas Chvatal <scarabeus@gentoo.org>
  -files/foo2zjs-Makefile-20071105.diff,
  -files/foo2zjs-udevfwld-20071105.diff,
  +files/foo2zjs-20081129-Makefile.patch,
  +files/foo2zjs-20081129-udevfwld.patch, -foo2zjs-20071103.ebuild,
  +foo2zjs-20081129.ebuild:
  Version bump. Remove old.

  27 Aug 2008; Timo Gurr <tgurr@gentoo.org> foo2zjs-20080225.ebuild:
  Fixed Manifest again, bug #226737. Removed pkg_postinst.

  18 Mar 2008; Stefan Schweizer <genstef@gentoo.org>
  foo2zjs-20080225.ebuild:
  update use flags for Chris Calitz <chris@sabest.co.za>, bug 213025, als
  rebuild digest, bug 213018

  14 Mar 2008; Denis Dupeyron <calchan@gentoo.org> Manifest:
  Fixed Manifest, see bug #201396. Fixed quoting.

*foo2zjs-20080225 (11 Mar 2008)

  11 Mar 2008; Stefan Schweizer <genstef@gentoo.org>
  +files/foo2zjs-Makefile-20080225.diff,
  +files/foo2zjs-udevfwld-20080225.diff, +foo2zjs-20080225.ebuild:
  version bump many thanks to roger <roger@eskimo.com> in bug 211480

  14 Dec 2007; Mike Doty <kingtaco@gentoo.org> ChangeLog:
  regen digest, bug 201396

*foo2zjs-20071103 (05 Nov 2007)

  05 Nov 2007; Stefan Schweizer <genstef@gentoo.org>
  -files/foo2zjs-Makefile-20070424.diff,
  -files/foo2zjs-udevfwld-20070424.diff,