@@ -2,6 +2,7 @@ AUX foo2zjs-20081129-Makefile.patch 4988 RMD160 15d7d13a6c3993395462c2a505f9ceb6
 AUX foo2zjs-20081129-udevfwld.patch 7851 RMD160 c4ffc179e248ac759e7d94d4bebabe518c5b02af SHA1 40684cd6daf35d7cfb4fb8780994964dc01ad246 SHA256 f10883053501866e0925ad7953801caaa8bedc10644449aa39c0331f30a10d5c
 DIST cpplxp.exe 4799488 RMD160 bcd5ceecca248c90a0d3e99dd55c6e1eedd4de6d SHA1 952ad6557f2a78ec30e9786f52e95f012e39ac1c SHA256 5f4c8b6f20ccf2d525f683847f5dc24bb4c7f58131d6704047d6c9a90d6895af
 DIST foo2zjs-20081129.tar.gz 1556478 RMD160 5bab9330aa2489adf8547df29883afff445b19da SHA1 bc716affa55e9ab7259d470d2b5fad97b85d820a SHA256 7b372e51a1251445f0150a7160148f4682ca32a2253f8ae9cbb845283b883b97
+DIST foo2zjs-20110512.tar.bz2 9725834 RMD160 8cf33ed7dda36de1423fe0d714043dc45878c0a7 SHA1 81c57fd0c65dc4d9589718ed07bf2ae0e928cdc4 SHA256 565fec134e48b49ea9c116510f002a978ae06c947937f94be3f1309c2d8a09d1
 DIST hpclj2600n.tar.gz 573660 RMD160 f4d39fccabb5c438038bcbfb0fec2fc2aa257b00 SHA1 b5f98f1d206269ed3ebdca72aa2f165fd57b7428 SHA256 c5660e8355df4d9a4effb1723e0296521f7ad826eae855cef88f3f48365ee741
 DIST km2430.tar.gz 929112 RMD160 f452b30927151a7c6796658bb6918e09f3e202bd SHA1 1e3755b7fb22fa00dddc3f150f5e93a26531ac66 SHA256 39d2df78c551db769507ef9308626b18cda42c94fb0c50a5c799a6165d73f819
 DIST km2530.tar.gz 2046286 RMD160 bb6433e03ef450c3c1e5abc45cda810090195dbf SHA1 958a3b3788d567264c1f6359f1735ecc900e2216 SHA256 22a82362a21fba60fb863da452394e1421e4c9d1e29cb43e05ad9edc2091cf2d
@@ -20,5 +21,6 @@ DIST sihpP1005.tar.gz 153804 RMD160 335814df5b9c54162ca68ceafe0d861c3490b12e SHA
 DIST sihpP1006.tar.gz 153940 RMD160 2185b786165c0d05866afa8adaa48758ebee27fc SHA1 395f6af7ee109aaff16a8bc210857eb9231a0b0e SHA256 b9efe6926fc4cac578b18b5ef8adab13e87c80a25430309110e3f61ace5bcf8f
 DIST sihpP1505.tar.gz 166199 RMD160 bebf8788c9927fcc84e7a65124192427cd801cc6 SHA1 1a53b28a4ae1daaa42790079b4fb6756061538ae SHA256 2700916d01ebb693a9a4e34a1858fe44229a1bd3bc7abe08ce0e32be3659e58b
 EBUILD foo2zjs-20081129.ebuild 4533 RMD160 c3d81b12a5158ec80d4b7f2806aadede6de2ed15 SHA1 7e182482748055f9ee03e3c934712d0c648f071c SHA256 01cd3ea8ce4f8a17eb5ea778cc2b91153cae599e9dae7c9ac9417667960bd015
-MISC ChangeLog 9107 RMD160 e3bacfb5fbe2f6e7a6ac80df6313692cb094158f SHA1 7609ae088b7d927533e68b507c2bc5d2e182affc SHA256 169e5a61cc18d2c6d25e62e6441ec5327b86b79e835813311e27f3158c9405e8
+EBUILD foo2zjs-20110512.ebuild 886 RMD160 7dc39f71b304bf49a4cdf5728c5f359a3c6c122b SHA1 722eb69efd37a0f87850861025055da55e323296 SHA256 57fb72d6badfd461b3690e156eacaa9f2704ab76bb407fe1977e9b7c3e2fc4a4
+MISC ChangeLog 9260 RMD160 e5e3e00bb8e23f41987d8086443fbe584aa331cd SHA1 88d924832d217af33043fe4acbb39cdfc6d95ce3 SHA256 16c3f93a35ae2ccd110b7b06a39c34a9a9c82b8ea7ee42f6279508258a0d3eec
 MISC metadata.xml 261 RMD160 fd6c87fa63054c379e842b826f994dce900bb013 SHA1 471683d4ccc2d0934e4f154b51de1be0435f508b SHA256 c4a2402d01197b6c1a7476c5b2b1ec7552b4acbc7dd51c7d775c4100c6324c8d
