@@ -1,6 +1,12 @@
 # ChangeLog for net-print/foo2zjs
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*foo2zjs-20110512 (12 May 2011)
+
+  12 May 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +foo2zjs-20110512.ebuild:
+  Add foo2zjs from 12/05/2011.
 
   25 Jan 2011; Dmitry 'daks' Fomenko <daks12@gmail.com>
   foo2zjs-20081129-Makefile.patch,
